# drygram

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  LICENSE  MANIFEST.in  NOTICE  README.md  coverage.ini  drygram.session  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md  security.md
.github/workflows/: docs.yml  lint.yml  publish.yml  python.yml  release.yml  security.yml  tests.yml
architecture/: index.html
assets/css/: custom.css
assets/js/: custom.js
authentication/: index.html
business/: index.html
callbacks/: index.html
client/: index.html
commands/: index.html
configuration/: index.html
deployment/: index.html
docs/: api_reference.md  architecture.md  authentication.md  business.md  callback.md  callbacks.md  client.md  commands.md  configuration.md  deployment.md  downloads.md  emoji.md  events.md  faq.md  filters.md  gates.md  html.md  index.md  installation.md  keyboards.md  listeners.md  logging.md  markdown.md  media.md  messages.md  migration.md  mongodb.md  performance.md  plugins.md  postgres.md  premium.md  quickstart.md  raw_protocol.md  redis.md  scheduler.md  security.md  sessions.md  sqlite.md  stickers.md  storage.md  (+8 more)
docs/reference/: api.md  raw.md
downloads/: index.html
drygram/: __init__.py  client.py  compat.py  version.py
drygram/bridge/: __init__.py  adapter.py  client.py
drygram/calls/: manager.py
drygram/commands/: __init__.py  aliases.py  analytics.py  arguments.py  autocomplete.py  categories.py  checks.py  completion.py  context.py  converters.py  cooldown.py  decorators.py  executor.py  formatter.py  groups.py  help.py  history.py  matcher.py  parser.py  permissions.py  prefixes.py  registry.py  router.py  syntax.py  validator.py  validators.py
drygram/crypto/: __init__.py  backend.py  cipher.py  manager.py  python_backend.py
drygram/dispatch/: dispatcher.py  gate.py  pipeline.py  queue.py  scheduler.py  watcher.py
drygram/errors/: rpc.py
drygram/network/: connection.py  core.py  pool.py  proxy.py  transport.py
drygram/parsers/: html.py  markdown.py
drygram/plugins/: loader.py
drygram/raw/: __init__.py  functions.py  parser.py  types.py
drygram/sessions/: __init__.py  base.py  binary.py  custom.py  encrypted.py  json.py  memory.py  mongo.py  postgres.py  redis.py  session.py  sqlite.py
drygram/types/: base.py  business.py  chat.py  emoji.py  markup.py  media.py  message.py  premium.py  story.py
emoji/: index.html
events/: index.html
examples/: callbacks.py  echo.py  emoji.py  hello.py  inline.py  media_album.py  premium.py  scheduler.py  sessions.py  stories.py  uploads.py  video_call.py  voice_call.py
examples/authentication/: password_login.py  qr_login.py
examples/business/: business.py  business_bot.py
examples/calls/: audio_stream.py  pause.py  playlist.py  queue.py  record.py  resume.py  screen_share.py  video_channel.py  video_chat.py  video_stream.py  voice_channel.py  voice_chat.py  volume.py
faq/: index.html
filters/: index.html
html/: index.html
installation/: index.html
keyboards/: index.html
listeners/: index.html
logging/: index.html
markdown/: index.html
media/: index.html
messages/: index.html
migration/: index.html
mongodb/: index.html
performance/: index.html
plugins/: index.html
postgres/: index.html
premium/: index.html
quickstart/: index.html
redis/: index.html
scheduler/: index.html
search/: search_index.json
security/: index.html
sessions/: index.html
sqlite/: index.html
stickers/: index.html
storage/: index.html
stories/: index.html
streaming/: index.html
testing/: index.html
tests/: test_boosts.py  test_channels.py  test_dispatcher.py  test_documents.py  test_emoji.py  test_extra_coverage.py  test_gifts.py  test_keyboards.py  test_login.py  test_markups.py  test_media.py  test_middlewares.py  test_parser_html.py  test_password_login.py  test_polls.py  test_raw.py  test_reactions.py  test_upload.py  test_users.py  test_video_call.py  test_voice_call.py  test_voice_notes.py  test_workers.py
uploads/: index.html
video/: index.html
voice/: index.html
(+86 files in other folders)
