[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DryGram"
version = "1.0.0"
description = "Modern asynchronous Telegram MTProto framework."

readme = "README.md"

license = {text="GPL-3.0"}

requires-python = ">=3.13"

authors = [
    {name="Santhu", email="telegramsanthu@gmail.com"}
]

keywords = [
    "telegram",
    "mtproto",
    "asyncio",
    "telegram-client",
    "telegram-framework"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable"
]

dependencies = [
    "cryptography>=42.0.0",
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "asyncpg>=0.29.0"
]

[project.optional-dependencies]
calls = [
    "py-tgcalls==2.3.3",
    "ntgcalls==2.2.5"
]
voice = [
    "py-tgcalls==2.3.3",
    "ntgcalls==2.2.5"
]
streaming = [
    "py-tgcalls==2.3.3",
    "ntgcalls==2.2.5"
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/TG-BOTSNETWORK/drygram"
Documentation = "https://github.com/TG-BOTSNETWORK/drygram/docs"
Repository = "https://github.com/TG-BOTSNETWORK/drygram"
"Bug Tracker" = "https://github.com/TG-BOTSNETWORK/drygram/issues"