[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DryGram"
dynamic = ["version"]
description = "Modern asynchronous Telegram MTProto framework."

readme = "README.md"

license = {text="GPL-3.0"}

requires-python = ">=3.13"

authors = [
    {name="Santhu", email="telegramsanthu@gmail.com"}
]

keywords = [
    "telegram",
    "mtproto",
    "asyncio",
    "telegram-client",
    "telegram-framework"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable"
]

dependencies = [
    "cryptography>=42.0.0",
    "aiosqlite>=0.20.0"
]

[project.optional-dependencies]
crypto = [
    "cryptography>=42.0.0"
]
calls = [
    "py-tgcalls==2.3.3",
    "ntgcalls==2.2.5"
]
mongodb = [
    "motor>=3.3.0"
]
redis = [
    "redis>=5.0.0"
]
postgres = [
    "asyncpg>=0.29.0"
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pip-audit>=2.7.0",
    "build>=1.2.0",
    "twine>=5.0.0"
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/TG-BOTSNETWORK/drygram"
Documentation = "https://github.com/TG-BOTSNETWORK/drygram/docs"
Repository = "https://github.com/TG-BOTSNETWORK/drygram"
"Bug Tracker" = "https://github.com/TG-BOTSNETWORK/drygram/issues"

[tool.setuptools.dynamic]
version = {attr = "drygram.version.__version__"}